--- a/FunWithEventsConsole/FunWithEventsConsole.csproj
+++ b/FunWithEventsConsole/FunWithEventsConsole.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.FeatureManagement" Version="2.5.1" />
+  </ItemGroup>
+
 </Project>
